ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: Ingress-hosts
  annotations:
     cert-manager.io/cluster-issuer: "letsencrypt-homolog"   
     nginx.ingress.kubernetes.io/rewrite-target: /
     kubernetes.io/ingress.class: "nginx"    
spec:
# ingressClassName: nginx
 tls:
  - hosts:
    - test.com.br
    secretName: test-tls
 rules:
   - host: test.com.br
     http:
       paths:
         - pathType: "Prefix"
           path: "/"
           backend:
             service:
               name: 
               port: 
                 number: 80
